# hosts-hook

./: .gitignore  Cargo.toml  Dockerfile.linux  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml
docs/: README.ko.md
examples/clang/: .gitignore  .hosts  .hosts.development  .hosts.production  test.sh  testdns.c
examples/nodejs/: .hosts  index.js  test.sh  testdns.js
hosts-hook/: Cargo.toml
hosts-hook-cli/: Cargo.toml
hosts-hook-cli/src/: main.rs
hosts-hook-rs/: Cargo.toml
hosts-hook-rs/src/platform/: mod.rs
hosts-hook/src/: lib.rs
hosts-hook/src/platform/: linux.rs  macos.rs
