[package]
name = "hosts-hook"
version = "0.9.1"
rust-version = "1.86"
edition = "2021"
authors = ["Junil Um <powerumc@gmail.com>"]
description = "A developer tool that overrides DNS resolution per directory without modifying the system hosts file."
categories = ["command-line-utilities", "development-tools", "network-programming"]
repository = "https://github.com/powerumc/hosts-hook"
homepage = "https://github.com/powerumc/hosts-hook"
readme = "../README.md"
license = "MIT"

[features]
default = ["debug"]
debug = ["debug_log"]
release = ["release_log"]

debug_log = ["log/max_level_trace"]
release_log = ["log/release_max_level_info"]

[lib]
name = "hostshook"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
log = { version =  "0.4", default-features = false, optional = true }
simple_logger = { version = "5", features = ["colors"] }
